--- a/_posts/2016-08-2-es2016+.md
+++ b/_posts/2016-08-2-es2016+.md
@@ -1,6 +1,6 @@
 ---
 layout: tutorial
-title: ES6 and Babel
+title: ES2016+ and Babel
 tldr: >
   <div class="page-heading">Quick Start</div>
     <p class="description">
