fix: this is our compromise, let's work on the tutorial content at this point and see what folks from the Babel project itself come back with

--- a/_posts/2016-08-2-es2015.md
+++ b/_posts/2016-08-2-es2015.md
@@ -1,6 +1,6 @@
 ---
 layout: tutorial
-title: ES2016+ and Babel
+title: ES6/ES2015+ and Babel
 tldr: >
   <div class="page-heading">Quick Start</div>
     <p class="description">
@@ -22,9 +22,9 @@ tldr: >
 
 {::options parse_block_html="true" /}
 
-# Using Istanbul With ES2015/Babel
+# Using Istanbul With ES6/ES2015+/Babel
 
-Detailed documentation about integrating Istanbul with ES2015.
+Detailed documentation about integrating Istanbul with ES6/ES2015+.
 
 <pre>
   <code class="hljs language-javascript">
