feat: wrote tutorial for integrating Istanbul with mocha

--- a/_posts/2016-08-2-mocha.md
+++ b/_posts/2016-08-2-mocha.md
@@ -4,14 +4,14 @@ title: Mocha
 tldr: >
   <div class="page-heading">Quick Start</div>
     <p class="description">
-      Explain how to integrate with Mocha in less words.
+      Adding coverage to your mocha tests couldn't be easier:
     </p>
     <div class="sh-code">
       $ npm install --save-dev nyc
     </div>
     <p class="description">
-      Now, simply place the command <strong>nyc</strong> in front of your existing test
-      command, for example:
+      Now, simply place the command <strong>nyc</strong> in front of the existing test
+      script in your package.json:
     </p>
     <pre><code class="hljs language-json">{
     "scripts": {
@@ -22,18 +22,70 @@ tldr: >
 
 {::options parse_block_html="true" /}
 
-# Using Istanbul With Mocha
+# Istanbul and Mocha
 
-Detailed documentation about integrating Istanbul with Mocha.
+_Istanbul is extensively tested with <a href="https://mochajs.org/" target="_blank">mocha</a>, which we use for many of our own repos._
 
-<pre>
-  <code class="hljs language-javascript">
-  // show off some code snippets.
-  const a = 99
-  const b = () => {
-    console.log('my awesome function');
+At the end of the day, all you need to do is place the bin **nyc** in front of the
+existing test scripts in your package.json:
+
+<pre><code class="hljs language-json">{
+  "scripts": {
+    "test": "nyc mocha --timeout=3000"
   }
-  </code>
-</pre>
+}</code></pre>
+
+_that's it!_ this will instrument the code that your tests execute, and any
+subprocesses that it spawns.
+
+## Using Alternative Reporters
+
+By default nyc uses Istanbul's `text` reporter. Various other reporters are
+available in the <a href="https://github.com/istanbuljs/istanbul-reports/tree/master/lib" target="_blank">istanbul-reports</a>
+repo.
+
+If you'd like to specify alternate reporter, or would like to run
+multiple reporters, simply use the `--reporter` flag.
+
+_for instance, suppose you would like to output the default text report, along
+with an HTML coverage report._
+
+<pre><code class="hljs language-json">{
+  "scripts": {
+    "test": "nyc --reporter=html --reporter=text mocha"
+  }
+}</code></pre>
+
+This will output the `text` report to the terminal, as well as outputting the
+detailed `html` report to `./coverage/index.html`.
+
+## Integrating with Coveralls
+
+<a href="https://coveralls.io" target="_blank">coveralls.io</a> is a great tool for adding coverage reporting to your continuous-integration flow. Here's how to get Istanbul
+integrated with coveralls and <a href="https://travis-ci.org/" target="_blank">travis-ci.org</a>:
+
+1. add the coveralls dependency to your module:
+
+  <pre><code class="hljs language-bash">npm install coveralls --save</code></pre>
+
+2. update the scripts in your package.json to include a bin for reporting coverage to coveralls:
+
+<pre><code class="hljs language-bash">{
+  "script": {
+     "test": "nyc --reporter=html --reporter=text mocha",
+     "coverage": "nyc report --reporter=text-lcov | coveralls"
+  }
+}</code></pre>
+
+3. For private repos, add the environment variable `COVERALLS_REPO_TOKEN` to Travis.
+
+4. add the following to your `.travis.yml`:
+
+  <pre><code class="hljs language-yaml">after_success: npm run coverage</code></pre>
+
+## What Now?
+
+nyc and Istanbul provide many advanced configuration options a good place to
+start learning more is the <a href="https://github.com/istanbuljs/nyc" target="_blank">istanbuljs/nyc README.</a>
 
 {::options parse_block_html="true" /}
