edits: address @matheusrocha89's comments

--- a/_posts/2016-08-2-mocha.md
+++ b/_posts/2016-08-2-mocha.md
@@ -66,7 +66,7 @@ integrated with coveralls and <a href="https://travis-ci.org/" target="_blank">t
 
 1. add the coveralls dependency to your module:
 
-  <pre><code class="hljs language-bash">npm install coveralls --save</code></pre>
+  <pre><code class="hljs language-bash">npm install coveralls --save-dev</code></pre>
 
 2. update the scripts in your package.json to include a bin for reporting coverage to coveralls:
 
