fix: formatting and some config in ES2015 tutorial

--- a/content/docs/tutorials/es2015.md
+++ b/content/docs/tutorials/es2015.md
@@ -67,13 +67,19 @@ plugin only when `NODE_ENV=test`.
 **package.json: configuring nyc**
 
 ```json
-{"nyc": {
-  "require": [
-    "babel-register"
-  ],
-  "sourceMap": false,
-  "instrument": false
-}}
+{
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "reporter": [
+      "lcov",
+      "text"
+    ],
+    "sourceMap": false,
+    "instrument": false
+  }
+}
 ```
 
 * `nyc.require.babel-register`: indicates that we should automatically run
@@ -83,21 +89,27 @@ plugin only when `NODE_ENV=test`.
 * `nyc.sourceMap=false`/`nyc.instrument=false`: indicates that we should not use
   `nyc` for instrumenting tests with coverage or handling source-maps; this
   logic is instead handled by `babel` and `babel-plugin-istanbul`.
+* `nyc.reporter`: A list of reporters that you can use, all of which come from
+  [istanbul](https://github.com/istanbuljs/istanbuljs/tree/master/packages/istanbul-reports/lib). In this case we telling nyc to ask for an `lcov` which gives you
+  a set of html reports for each file instrumented as well as an `lcov.info` file which can
+  be sent to coverage services like coveralls.io or codecov.io. The `text` reporter gives
+  a table summary of each file's coverage in the terminal.
 
 **package.json: script stanza**
 
 ```json
-{"scripts": {
-  "build": "babel index.js -d src",
-  "test": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text mocha test.js",
-  "prepublish": "npm run build"
-}}
+{
+  "scripts": {
+    "build": "babel index.js -d src",
+    "test": "cross-env NODE_ENV=test nyc mocha test.js",
+    "prepublish": "npm run build"
+  }
+}
 ```
 
 * `scripts.test`:
   * `cross-env NODE_ENV=test`: sets the `NODE_ENV` environment variable resulting in the `babel-plugin-istanbul` plugin being loaded.
-  * `nyc --reporter=lcov --reporter=text`: indicates that nyc should be used to
-     run `mocha`, and that it should output both an `lcov` and a `text` report.
+  * `nyc`: indicates that nyc should be used to run `mocha`.
   * `mocha test.js`: it doesn't get much simpler than this; use `mocha` to run
     `test.js`.
 * `scripts.build`: this script uses `babel-cli` to compile your ES2015 code.
@@ -135,9 +147,11 @@ This command will read in your ES2015 `./index.js` file and output the ES5
 can be achieved by adding a `files` stanza to your package.json:
 
 ```json
-{"files": [
-  "src/index.js"
-]}
+{
+  "files": [
+    "src/index.js"
+  ]
+}
 ```
 
 ## Instrumenting Native ES2015 Code
@@ -148,9 +162,3 @@ a useful chart for viewing compatibility information.
 
 nyc uses the same parser underneath the hood as babel and understands native
 ES2015 constructs; with zero configuration you can start instrumenting your ES2015 code!
-
-```json
-{"scripts": {
-  "test": "nyc --reporter=text --reporter=lcov mocha test.js"
-}}
-```
