tutorials/es2015: Don't use arrow functions in describe() and it() (#50)
* tutorials/es2015: Don't use arrow functions in describe() and it()

* tutorials/es2015: Add whitespace

--- a/content/docs/tutorials/es2015.md
+++ b/content/docs/tutorials/es2015.md
@@ -127,8 +127,8 @@ import CoverageBabel from './index'
 
 require('chai').should()
 
-describe('CoverageBabel', () => {
-  it('returns hello world message', () => {
+describe('CoverageBabel', function () {
+  it('returns hello world message', function () {
     const cls = new CoverageBabel('Ben')
     cls.helloMessage().should.equal('hello Ben')
   })
