docs: Update ES2015 tutorial to reference babel 7 modules.

--- a/content/docs/tutorials/es2015.md
+++ b/content/docs/tutorials/es2015.md
@@ -12,7 +12,7 @@ compatible ES2015+ code using <a href="https://github.com/babel/babel" target="_
 
 For this tutorial, feel free to follow along in the repository <a href="https://github.com/bcoe/es2015-coverage" target="_blank">bcoe/es2015-coverage</a>
 
-## ES2015+ With `babel-preset-env`
+## ES2015+ With `@babel/preset-env`
 
 ES2015+ is composed of a <a href="https://babeljs.io/docs/plugins/" target="_blank">daunting array</a> of JavaScript language features. Babel comes to the rescue, providing collections of plugins that
 track the standardization process.
@@ -26,11 +26,11 @@ By relying on the preset, there are only a few dependencies that we need to add
 test coverage to our ES2015 project:
 
 ```bash
-npm i babel-cli babel-register babel-plugin-istanbul babel-preset-env cross-env mocha chai nyc --save-dev
+npm i @babel/cli @babel/register babel-plugin-istanbul @babel/preset-env cross-env mocha chai nyc --save-dev
 ```
 
-* `babel-cli`: is the command-line interface for babel; we use it during the build step.
-* `babel-register`: automatically compiles ES2015+ JavaScript as it's required in your
+* `@babel/cli`: is the command-line interface for babel; we use it during the build step.
+* `@babel/register`: automatically compiles ES2015+ JavaScript as it's required in your
    tests.
 * `babel-plugin-istanbul`: this plugin adds coverage instrumentation to your ES2015+ code
    as it's compiled.
@@ -42,7 +42,7 @@ npm i babel-cli babel-register babel-plugin-istanbul babel-preset-env cross-env 
 
 **.babelrc**
 
-We place a `.babelrc` in the root of our project which is used by `babel-cli`
+We place a `.babelrc` in the root of our project which is used by `@babel/cli`
 to apply the compilation process:
 
 ```json
@@ -60,7 +60,7 @@ to apply the compilation process:
 }
 ```
 
-* `presets.env`: indicates that we should load the `babel-preset-env` set of plugins, which is kept up to date for us.
+* `presets.env`: indicates that we should load the `@babel/preset-env` set of plugins, which is kept up to date for us.
 * `env.test.plugins.istanbul`: indicates that we should run the `babel-plugin-istanbul`
 plugin only when `NODE_ENV=test`.
 
@@ -70,7 +70,7 @@ plugin only when `NODE_ENV=test`.
 {
   "nyc": {
     "require": [
-      "babel-register"
+      "@babel/register"
     ],
     "reporter": [
       "lcov",
@@ -82,8 +82,8 @@ plugin only when `NODE_ENV=test`.
 }
 ```
 
-* `nyc.require.babel-register`: indicates that we should automatically run
-  `require('babel-register')` as `nyc` loads our tests. This allows us to
+* `nyc.require.@babel/register`: indicates that we should automatically run
+  `require('@babel/register')` as `nyc` loads our tests. This allows us to
    write ES2015+ code in our tests without running a build step (code is automatically
    compiled by babel as it is loaded).
 * `nyc.sourceMap=false`/`nyc.instrument=false`: indicates that we should not use
@@ -118,7 +118,7 @@ plugin only when `NODE_ENV=test`.
 
 ### Writing Tests
 
-Because `nyc` automatically loads `babel-register` there is no
+Because `nyc` automatically loads `@babel/register` there is no
 build step necessary for your tests. Just write your tests using
 ES2015+ syntax and `require()` the pre-compiled ES2015+ JavaScript files:
 
@@ -137,7 +137,7 @@ describe('CoverageBabel', function () {
 
 ### Shipping Your Code
 
-When it's time to publish your code to npm, simply use `babel-cli` to compile
+When it's time to publish your code to npm, simply use `@babel/cli` to compile
 your ES2015+ JavaScript into ES5 compatible code:
 
 `babel index.js -d src`
