ES2015: Fix reference @babel/preset-env.

--- a/content/docs/tutorials/es2015.md
+++ b/content/docs/tutorials/es2015.md
@@ -48,7 +48,7 @@ to apply the compilation process:
 ```json
 {
   "presets": [
-    "env"
+    "@babel/preset-env"
   ],
   "env": {
     "test": {
@@ -60,7 +60,7 @@ to apply the compilation process:
 }
 ```
 
-* `presets.env`: indicates that we should load the `@babel/preset-env` set of plugins, which is kept up to date for us.
+* `presets`: indicates that we should load the `@babel/preset-env` set of plugins, which is kept up to date for us.
 * `env.test.plugins.istanbul`: indicates that we should run the `babel-plugin-istanbul`
 plugin only when `NODE_ENV=test`.
 
